--- a/services/engine/Dockerfile
+++ b/services/engine/Dockerfile
@@ -1,19 +1,22 @@
-FROM eclipse-temurin:25-jdk
+FROM eclipse-temurin:21-jdk AS build
+
+WORKDIR /workspace
+
+COPY gradlew .
+COPY gradle ./gradle
+COPY build.gradle.kts settings.gradle.kts ./
+COPY src ./src
+COPY ../proto ./proto
+
+RUN ./gradlew clean installDist
+
+FROM eclipse-temurin:21-jre
 
 WORKDIR /app
+COPY --from=build /workspace/build/install/engine ./engine
 
-# Copy gradle files first for caching
-COPY build.gradle.kts settings.gradle.kts gradlew ./
-COPY gradle ./gradle
-
-# Copy source
-COPY src ./src
-
-# Build
-RUN ./gradlew installDist
-
-# Expose gRPC port
 EXPOSE 50051
 
-# Run application (path may vary based on project name, assuming 'engine')
-CMD ["./build/install/engine/bin/engine"]
+ENV ENGINE_PORT=50051
+
+CMD ["./engine/bin/engine"]
