--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -1,18 +1,22 @@
-FROM oven/bun:latest
-
+FROM node:20-alpine AS base
 WORKDIR /app
+ENV NEXT_TELEMETRY_DISABLED=1
 
-# Copy package files
-COPY package.json bun.lockb ./
+FROM base AS deps
+COPY package.json bun.lock ./
+RUN npm install -g bun@1.1.30 \
+  && bun install --frozen-lockfile
 
-# Install dependencies
-RUN bun install
-
-# Copy source
+FROM base AS builder
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+RUN bun run build
 
-# Expose HTTP port
+FROM base AS runner
+ENV NODE_ENV=production
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/node_modules ./node_modules
 EXPOSE 3000
-
-# Run application
-CMD ["bun", "run", "dev"]
+CMD ["bun", "run", "start"]
